# kvlocal

./: .gitignore  Cargo.toml  README.md  log
src/: lib.rs  log.rs  main.rs  protocol.rs  seek.rs  server.rs  storage.rs
src/storage/: kvlocal.rs  mod.rs  sled.rs
