[package]
name = "kvlocal"
version = "0.1.0"
authors = ["Alexander Gusakovsky <alexandergusakovsky@gmail.com>"]
description = "Key-value storage"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
