[package]
name = "kvlocal"
version = "0.1.0"
authors = ["Alexander Gusakovsky <alexandergusakovsky@gmail.com>"]
description = "Key-value storage"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.5"
clap = { version = "3.0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
log = "0.4.0"
env_logger = "0.8.4"
